@@ -304,6 +304,9 @@ newline sequence.
 90. Run test 8 (internal offsets and code sizes) for link sizes 3 and 4 as well 
 as for link size 2.
 
+91. Document that JIT has a limit on pattern size, and give more information 
+about JIT compile failures in pcre2test.
+
 
 Version 10.20 30-June-2015
 --------------------------
